# RedRHex

./: .gitattributes  .gitignore  README.md  README_REDRHEX.md  RedRhex.usd  curriculum_dr.patch  redrhex_multiskill_fix.patch  test_joint_velocity.py  test_joint_velocity2.py
.github/workflows/: training-panel-pages.yml
docs/: 2026_Midterm.md  COMMANDS.md  energy_aware_reward_integration_report.md  energy_aware_reward_integration_report.tex  redrhex_forwardfast_professor_report.md  redrhex_improvement_strategy_full.md  redrhex_meeting_report.md  redrhex_stage_training_explainer.md  redrhex_train_play_guide.md  redrhex_train_report.md
ros2_ws/src/redrhex_lowlevel_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/redrhex_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/redrhex_msgs/msg/: RedRhexMotorCommand.msg  RedRhexMotorState.msg
ros2_ws/src/redrhex_rl_controller/: README.md  package.xml  setup.cfg  setup.py
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: eval_command_sweep.py  play.py  play_jumping.py  train.py  train_jumping.py  train_stage_pipeline.sh  validate_distillation_stack.py  validate_reform_stack.py
scripts/skrl/: play.py  train.py
source/RedRhex/: setup.py
source/RedRhex/RedRhex/: ui_extension_example.py
source/RedRhex/config/: extension.toml
source/RedRhex/docs/: CHANGELOG.rst
test_7_description/test_7_description/: CMakeLists.txt  package.xml
tools/training_panel/: README.md  __init__.py  __main__.py  remote_worker.py  reward_presets.json  terrain_presets.json
tools/training_panel/docs/: MANUAL_EN.md  (+3 more)
(+121 files in other folders)
